tooling/nargo_cli/tests/snapshots/compile_failure/nested_slice_declared_type/execute__tests__nested_slice_declared_type_output.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: "&format!(\"success: {:?}\\nexit_code: {}\\n----- stdout -----\\n{}\\n----- stderr -----\\n{}\",\noutput.status.success(), output.status.code().unwrap_or(!0), stdout, stderr)"
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
error: Nested slices, i.e. slices within an array or slice, are not supported
  ┌─ src/main.nr:4:16
  │
4 │     let slice: [[Field]] = [];
  │                --------- Try to use a constant sized array or BoundedVec instead
  │

Aborting due to 1 previous error
